--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -16,6 +16,7 @@ jobs:
       - name: random cron
         run: |
           sed -i -E "s/(- cron: ')[0-9]+( [^[:space:]]+ \* \* \*')/\1$(($RANDOM % 10))\2/g" .github/workflows/run.yml
+          GIT_TERMINAL_PROMPT=1
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
